refactor(misc): Harden request handling, tighten defaults, and pin CI dependencies